# mink

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  pyproject.toml
.github/workflows/: publish.yml
benchmarks/: bench_trajectory.py  traj_aloha.py  traj_humanoid.py
docs/: conf.py  index.rst  installation.rst  references.rst
docs/api/: configuration.rst  index.rst  inverse_kinematics.rst  lie.rst  limits.rst  tasks.rst  utilities.rst
docs/background/: derivations.rst
docs/tutorial/: example_gallery.rst  index.rst  lie_groups.rst  mujoco_basics.rst  quickstart.rst  tasks_and_limits.rst
examples/: arm_so101.py
examples/the_robot_studio_so101/: scene.xml
src/mink/: __init__.py  configuration.py  utils.py
src/mink/lie/: _lie_ops_c.c  _lie_ops_c.pyi
src/mink/limits/: collision_avoidance_limit.py
src/mink/tasks/: frame_task.py  relative_frame_task.py
tests/: test_collision_avoidance_limit.py  test_configuration.py  test_frame_task.py  test_relative_frame_task.py  test_utils.py
